* filterRowsTemplate gets enhancement of condition attributes and filterlists

. Themes
* new pageEffect bcdEffectPageStickyFooter

. Security
* client-controlled subject filters
** the new servlet-filter de.businesscode.bcdui.web.filters.SubjectSettingsFilter allows setting subject filters from client
** client-controlled subject filters can be set from client via bcdui.util.security API

. Server
* Updated 3rd party jars (apache commons etc) to latest versions
* Add notLike and notIn operators to f:Filter, including universal filter widget

. Build / Dev / Docu
* In Eclipse, sub-projects Client, Server, Theme etc now have names BCD-UI--SubProjectName to keep them together in the navigation tree
* Switched to gradle 4.2, added gradle wrapper, updated nodeJs to 6.11
* Updated bcduiApiStubs.js to fit Eclipse Oxygen+Tern and IDEA 2017.2
* HTML JS API docu is now showing source names and lines

.Major bug fixes:
* I18n: local messages.xml catalog file can contain multi language enabling full i18n support w/o database
* HTML Custom Elements for Safari was broken, after Safari switched to Webcomponents API v1

.Backward Incompatibilities:
* Component: cube/scorecard blindUpDowns, ranking require new i18n keys (bcd_Rank_, bcd_Sc_Blind_, bcd_Cb_Blind_)
* Charts: Moved VML drawer to BCD-UI-DE
* Updated 3rd party jars (apache commons etc) to latest versions
* Cube: for templateManager, RankingEditor or Summary, you need to include bcduiComponent in addition to bcduiCube. Symptom: _renderSummaryArea is undefined
** CubeContextMenu, Sort Measre is replaced by Column Sorting, when using custom context menus, remove calls to setSortMeasure, add calls to setColumnSort 
* Export: removed bcdui.component.exports.excel functions (detailExport, exportHTMLElement). Use bcdui.component.exports detailExport, exportWysiwygAsExcel functions.
* New entries for Eclipse injection to support ECMA5 transpiled sources, see Docu/development/eclipseInjected.xml